county data white space fixed

--- a/src/components/CountyData.css
+++ b/src/components/CountyData.css
@@ -21,7 +21,7 @@
 
 .county-container {
     background-color: #A7CDBD;
-    height: 100vh;
+    height: 130vh;
     width: 100vw;
 }
 
